--- a/rev1/readme
+++ b/rev1/readme
@@ -1,3 +1,3 @@
 DWG文件夹内是切割文件的图纸，可以直接交给亚克力或金属板材的商家进行切割；
-Gerber是PCB制作文件，可以交给嘉立创或其他厂商打板。
+Gerber是PCB制作文件，可以交给嘉立创或其他厂商打板（记得选择指定位置加客编）。
 其中Gerber_1.2是没有typec转化电路的版本，制作比较简单，推荐新手使用这个版本，另外树莓派pico也有第三方的typec版本，只要引脚和官方版本一样就没有问题。
